--- a/about.html
+++ b/about.html
@@ -35,9 +35,9 @@
           พร้อมด้วยอาจารย์ที่ปรึกษาคืออาจารย์กีรติ มณีสาย
           ชุมนุมได้รับการอนุมัติจัดตั้งอย่างเป็นทางการจากคณบดีคณะวิทยาศาสตร์และวิศวกรรมศาสตร์
           ผศ.ดร.ศมณพร สุทธิบาก ในวันที่ 24 มีนาคม 2567
-          และเป็นชุมนุมอย่างเป็นทางการของสโมสรนิสิตคณะฯ ตั้งแต่นั้นมา
+          และเป็นชุมนุมอย่างเป็นทางการของคณะวิทยาศาสตร์และวิศวกรรมศาสตร์ มหาวิทยาลัยเกษตรศาสตร์ วิทยาเขตเฉลิมพระเกียรติ จังหวัดสกลนคร ตั้งแต่นั้นมา
         </p>
-        <img src="images/founding_event.jpg" alt="ภาพการก่อตั้งชุมนุม" />
+        <img src="images/foundation.png" alt="ภาพการก่อตั้งชุมนุม" />
       </div>
 
       <div class="section">
@@ -50,7 +50,7 @@
           และความน่าเชื่อถือ และสีเหลืองทองแสดงถึงความสว่าง ความคิดสร้างสรรค์
           และพลังของเยาวชน
         </p>
-        <img src="images/logo.png" alt="ตราสัญลักษณ์ของชุมนุม" />
+        <img src="images/slide1.png" alt="ตราสัญลักษณ์ของชุมนุม" />
       </div>
 
       <div class="section">
