--- a/activities.html
+++ b/activities.html
@@ -26,22 +26,64 @@
     <h2>รายชื่อกิจกรรม</h2>
 
     <div class="activity-card">
-      <img src="images/activity1.jpg" alt="ภาพกิจกรรมที่ 1">
-      <h3>อบรมเทคโนโลยี IoT</h3>
-      <p>กิจกรรมอบรมการสร้างอุปกรณ์ IoT สำหรับควบคุมอุปกรณ์ไฟฟ้าผ่านอินเทอร์เน็ต</p>
-      <p><strong>วันที่:</strong> 15 กุมภาพันธ์ 2567</p>
-      <p><strong>สถานที่:</strong> มหาวิทยาลัยเกษตรศาสตร์</p>
-      <p><a href="https://example.com/iot-training" target="_blank">ดูรายละเอียดเพิ่มเติม</a></p>
+      <img src="images/ING2024.png" alt="ภาพกิจกรรมที่ 1">
+      <h3>I-NEW GEN AWARDS 2024 (วันนักประดิษฐ์)</h3>
+      <p>นายนิติพนธ์ ผ่องแผ้ว 
+นายพรหมมินทร์ บัวพันธ์ 
+นายธนกร ชมภูบุตร 
+และ นางสาวปนัดดา เชียนพลแสน
+
+นิสิตชั้นปีที่ 1 สาขาวิชาวิศวกรรมไฟฟ้า และสาขาวิชาวิศวกรรมคอมพิวเตอร์
+คณะวิทยาศาสตร์และวิศวกรรมศาสตร์ มหาวิทยาลัยเกษตรศาสตร์ วิทยาเขตเฉลิมพระเกียรติ จังหวัดสกลนคร  
+
+ในโอกาสได้รับรางวัลเหรียญทองแดง 
+โครงงานสิ่งประดิษฐ์ หัวข้อ "การพัฒนาระบบความร้อนในรองเท้าเพื่อแก้ปัญหากลิ่นอับ"
+จากการเข้าร่วมการแข่งขัน โครงการ Thailand New Gen Inventors Award ประจำปี 2567 
+กลุ่มพลังงาน วัสดุ และเคมีชีวภาพ
+
+อาจารย์ที่ปรึกษาโครงงาน : อ.ดร.สุริยา ชิณวงศ์ และ อ.กีรติ มณีสาย</p>
+      <p><strong>วันที่:</strong> 2-6 กุมภาพันธ์ 2567</p>
+      <p><strong>สถานที่:</strong> Event Hall 100 - 102 ศูนย์นิทรรศการและการประชุมไบเทค บางนา กรุงเทพมหานคร</p>
+      <p><strong>จัดโดย:</strong> สำนักงานการวิจัยแห่งชาติ (วช.)</p>
+      <p><a href="https://kuse.csc.ku.ac.th/article/1453" target="_blank">ดูรายละเอียดเพิ่มเติม</a></p>
     </div>
 
     <div class="activity-card">
-      <img src="images/activity2.jpg" alt="ภาพกิจกรรมที่ 2">
-      <h3>เข้าร่วมประกวด I-NEW GEN AWARDS 2024</h3>
-      <p>ชุมนุมเข้าร่วมประกวดนวัตกรรมระดับประเทศ และได้รับรางวัลเหรียญทองแดง</p>
-      <p><strong>วันที่:</strong> 10 มีนาคม 2567</p>
-      <p><strong>สถานที่:</strong> มหาวิทยาลัยเกษตรศาสตร์</p>
-      <p><a href="https://example.com/inewgen2024" target="_blank">ดูรายละเอียดเพิ่มเติม</a></p>
+      <img src="images/Gear.jpg" alt="ภาพกิจกรรมที่ 2">
+      <h3>โครงการ “Gear Talent” การแข่งขันทางด้านวิชาการ และนวัตกรรมสมัยใหม่ ประจำปีการศึกษา 2566</h3>
+      <p>KUSEYIC ขอแสดงความยินดียิ่งกับทีมนวัตกรรุ่นเยาว์  กับรางวัล Bronze Award 🏆🏆🏆
+ผลงานนวัตกรรม "ระบบรถประจำทางอัจฉริยะสำหรับพื้นที่ชนบท"
+ในโครงการ Gear Talent การแข่งขันทางด้านวิชาการ และนวัตกรรมสมัยใหม่ ประจำปีการศึกษา 2566 </p>
+      <p><strong>วันที่:</strong> 22 มิถุนายน 2567</p>
+      <p><strong>สถานที่:</strong> คณะวิศวกรรมศาสตร์ มหาวิทยาลัยมหิดล</p>
+      <p><strong>จัดโดย:</strong> สภาคณบดีแห่งประเทศไทย และสหพันธ์นิสิตนักศึกษาวิศวกรรมศาสตร์ แห่งประเทศไทย (สนวท.)</p>
+      <p><a href="https://www.eg.mahidol.ac.th/egmu/all-news/3781-gear-talent-project-an-academic-competition-showcasing-modern-innovation-for-the-academic-year-2023.html" target="_blank">ดูรายละเอียดเพิ่มเติม</a></p>
     </div>
+
+    <div class="activity-card">
+      <img src="images/KUHappy.png" alt="ภาพกิจกรรมที่ 4">
+      <h3>การแข่งขัน KU Happy&Healthy Hackathon 2024</h3>
+      <p>พี่ ๆ นิสิตชุมนุมนวัตกรรุ่นเยาว์ ผ่านเข้ารอบชิงชนะเลิศในการแข่งขัน KU Happy&Healthy Hackathon 2024 ในชื่อทีม Hackython 
+ผลงาน : แอพพลิเคชั่นสุขภาพจิต KU MENTAL </p>
+      <p><strong>วันที่:</strong> 20-22 มิถุนายน 2567</p>
+      <p><strong>สถานที่:</strong> ณ มหาวิทยาลัยเกษตรศาสตร์ บางเขน</p>    
+      <p><strong>จัดโดย:</strong> กองพัฒนานิสิต มหาวิทยาลัยเกษตรศาสตร์</p>
+      <p><a href="https://www.facebook.com/share/p/1EpzmWVeuU/" target="_blank">ดูรายละเอียดเพิ่มเติม</a></p>
+    </div>
+
+    <div class="activity-card">
+      <img src="images/TIA2024.jpg" alt="ภาพกิจกรรมที่ 3">
+      <h3>Thailand Innovation Awards 2024</h3>
+      <p>ผ่านการคัดเลือกเข้าร่วมโครงการ 
+"รางวัลนวัตกรรมแห่งประเทศไทย ประจำปี 2567" หรือ “Thailand Innovation Awards 2024” ✨
+.
+โดย ติด 1 ใน 10 ทีมที่ผ่านเข้ารอบ ระดับปริญญาตรี - ปวส.</p>
+      <p><strong>วันที่:</strong> 15 สิงหาคม 2567</p>
+      <p><strong>สถานที่:</strong> ณ งานมหกรรมวิทยาศาสตร์</p>
+      <p><a href="https://www.facebook.com/share/p/19UUJgZu8y/" target="_blank">ดูรายละเอียดเพิ่มเติม</a></p>
+    </div>
+
+    
 
     <!-- เพิ่มกิจกรรมอื่น ๆ ได้ที่นี่ -->
   </main>
