--- a/location.html
+++ b/location.html
@@ -29,6 +29,7 @@
         เลขที่ 59/5 หมู่ 1 ถนน วปรอ. 366<br />
         ตำบลเชียงเครือ อำเภอเมือง จังหวัดสกลนคร<br />
         รหัสไปรษณีย์ 47000
+        facebook: <a href="https://www.facebook.com/profile.php?id=61557047412861">KUSE Young Innovator Club</a><br />
       </p>
 
       <h3>Map</h3>
