--- a/members.html
+++ b/members.html
@@ -24,7 +24,7 @@
 
   <main>
    
-    <h2 style="text-align:center;">รายชื่อคณะกรรมการและสมาชิก</h2>
+    <h2 style="text-align:center;">รายชื่อคณะกรรมการ</h2>
 
     <!-- แถวที่ 1: ประธาน -->
     <div class="section-title">ประธาน</div>
@@ -45,7 +45,7 @@
         <p>รองประธานฝ่ายนวัตกรรมและบริหารงานทั่วไป</p>
       </div>
       <div class="member-card">
-        <img src="images/vice2.jpg" alt="รองประธาน">
+        <img src="images/Toey.jpg" alt="รองประธาน">
         <h3>นางสาวปนัดดา เชียนพลแสน</h3>
         <p>รองประธานฝ่ายกิจกรรมและสื่อสารองค์กร</p>
       </div>
@@ -55,7 +55,7 @@
     <div class="section-title">เลขานุการ</div>
     <div class="board-row">
       <div class="member-card">
-        <img src="images/head1.jpg" alt="ฝ่ายกิจกรรม">
+        <img src="images/Tunyoug.png" alt="ฝ่ายกิจกรรม">
         <h3>นางสาวดุสิตา จองลีพันธ์</h3>
         <p>เลขานุการชุมนุมนวัตกรรุ่นเยาว์</p>
       </div>
@@ -65,7 +65,7 @@
     <div class="section-title">เหรัญญิก</div>
     <div class="board-row">
       <div class="member-card">
-        <img src="images/head1.jpg" alt="ฝ่ายกิจกรรม">
+        <img src="images/pawana.jpg" alt="ฝ่ายกิจกรรม">
         <h3>นางสาวภาวนา ยะวังพล</h3>
         <p>เหรัญญิก</p>
       </div>
@@ -75,13 +75,13 @@
     <div class="section-title">หัวหน้าฝ่าย</div>
     <div class="board-row">
       <div class="member-card">
-        <img src="images/head1.jpg" alt="ฝ่ายกิจกรรม">
-        <h3>นาย C</h3>
+        <img src="images/Tyr.jpg" alt="ฝ่ายกิจกรรม">
+        <h3>นายธีรภัทร์ คูณศิริกูล</h3>
         <p>หัวหน้าฝ่ายเทคนิคพิเศษ</p>
       </div>
       <div class="member-card">
-        <img src="images/head2.jpg" alt="ฝ่ายประชาสัมพันธ์">
-        <h3>นางสาว D</h3>
+        <img src="images/A.jpg" alt="ฝ่ายประชาสัมพันธ์">
+        <h3>นายวราวุฒิ วงค์ตาขี่</h3>
         <p>หัวหน้าฝ่ายอำนวยการ</p>
       </div>
     </div>
@@ -90,16 +90,16 @@
     
 
     <!-- แถวที่ 5: สมาชิก -->
-    <div class="section-title">สมาชิกชุมนุมนวัตกรรุ่นเยาว์</div>
+    <div class="section-title">ผู้ช่วยฝ่าย</div>
     <div class="board-row">
       <div class="member-card">
-        <img src="images/member1.jpg" alt="สมาชิก 1">
-        <h3>นาย G</h3>
+        <img src="images/Darewu.jpg" alt="สมาชิก 1">
+        <h3>นายภานุพงษ์ นินนันท์</h3>
         <p>สมาชิก</p>
       </div>
       <div class="member-card">
-        <img src="images/member2.jpg" alt="สมาชิก 2">
-        <h3>นางสาว H</h3>
+        <img src="images/job.jpg" alt="สมาชิก 2">
+        <h3>นายวุฒิภัทร อภัยโส</h3>
         <p>สมาชิก</p>
       </div>
       <div class="member-card">
@@ -113,17 +113,37 @@
         <p>สมาชิก</p>
       </div>
     </div>
-      <!-- แถวที่ 4: เหรัญญิก -->
+      <!-- แถวที่ 4: อาจารย์ -->
     <div class="section-title">อาจารย์ที่ปรึกษาชุมนุม</div>
     <div class="board-row">
       <div class="member-card">
-        <img src="images/head1.jpg" alt="อาจารย์ที่ปรึกษา">
+        <img src="images/fsekrm.jpg" alt="อาจารย์ที่ปรึกษา">
         <h3>อาจารย์กีรติ มณีสาย</h3>
         <p>อาจารย์ที่ปรึกษาชุมนุม</p>
       </div>
     </div>
 
-    <p>เนื้อหากำลังจะถูกเพิ่มเร็ว ๆ นี้</p>
+    <p>ทำเนียบผู้ก่อตั้ง/ประธานชุมนุมนวัตกรรุ่นเยาว์</p>
+    <div class="section-title">ผู้ก่อตั้ง</div>
+    <div class="board-row">
+      <div class="member-card">
+        <img src="images/prommin.png" alt="ผู้ก่อตั้ง">
+        <h3>นายพรหมมินทร์ บัวพันธ์</h3>
+        <p>ผู้ก่อตั้ง</p>
+      </div>
+    </div>
+    <div class="section-title">ประธานชุมนุม</div>
+    <div class="board-row">
+      <div class="member-card">
+        <img src="images/nitipon.png" alt="ประธานชุมนุม">
+        <h3>นายนิติพนธ์ ผ่องแผ้ว</h3>
+        <p>ประธานชุมนุมนวัตกรรุ่นเยาว์ (2567-2568)</p>  
+      </div>
+      <div class="member-card">
+        <img src="images/pantong.jpg" alt="ประธานชุมนุม">
+        <h3>นายพานทอง โสนนอก</h3>
+        <p>ประธานชุมนุมนวัตกรรุ่นเยาว์ (2568-ปัจจุบัน)</p>
+      </div>
   </main>
 
 </body>
