--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <footer>
       <div class="footer-content">
-        <img src="images/logo.png" alt="โลโก้ชุมนุม" class="footer-logo" />
+        <img src="images/slide1.png" alt="โลโก้ชุมนุม" class="footer-logo" />
         <div class="footer-text">
           <h3>KUSE Young Innovator Club</h3>
           <p>
